recipe card made responsive

--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -22,6 +22,8 @@
     color:white;
     background-color: red;
 }
-@media screen {
-    
-}
+@media only screen and (max-width: 600px) {
+    .recipe{
+        width: 100%;
+    }
+  }
